--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-ratings-declarative": "^3.4.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-settings-pane": "^0.1.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
